tung nt add css from

--- a/.env
+++ b/.env
@@ -7,11 +7,15 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=35.240.231.12
+DB_HOST=localhost
+#DB_HOST=35.240.231.12
 DB_PORT=3306
-DB_DATABASE=jp
-DB_USERNAME=admin
-DB_PASSWORD=3e4a6f8d1bf3f7745
+DB_DATABASE=jpproject
+DB_USERNAME=root
+DB_PASSWORD=
+#DB_DATABASE=jp
+#DB_USERNAME=admin
+#DB_PASSWORD=3e4a6f8d1bf3f7745
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
